[package]
name = "bdl"
version = "0.1.1"
authors = ["Emma Lo <emma@iscute.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
paw = "1.0"
structopt = { version = "0.3", features = ["paw"] }
dotenv = "0.15.0"
url = "2.1.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tokio]
version = "0.2"
features = ["full"]
